--- a/LoudnessMatching/LoudnessMatching.css
+++ b/LoudnessMatching/LoudnessMatching.css
@@ -1,6 +1,6 @@
 #lmui
 {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -8,12 +8,12 @@
     animation: fadein ease 1s;
 }
 
-#lmsubmit
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 80px;
-    animation: fadein ease 1s;
-}
+/*#lmsubmit*/
+/*{*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    text-align: center;*/
+/*    margin-bottom: 80px;*/
+/*    animation: fadein ease 1s;*/
+/*}*/
