--- a/Style.css
+++ b/Style.css
@@ -190,7 +190,7 @@ h3{
     margin-left: auto;
     left: 0;
     right: 0;
-    min-height: 30vh;
+    min-height: 25vh;
     font-family: var(--font);
     font-size: var(--button-text-size);
     color: var(--text-color-2);
@@ -295,6 +295,7 @@ h3{
     justify-content: center;
     align-items: center;
     text-align: center;
+    vertical-align: middle;
     font-family: var(--font);
     font-weight: lighter;
     font-size: var(--button-text-size);
