--- a/Style.css
+++ b/Style.css
@@ -277,28 +277,19 @@ h3{
     margin-left: 12px;
 }
 
-#wordselect
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-top: 100px;
-    margin-bottom: 70px;
-    animation: fadein ease 1s;
-}
-
 #correctness
 {
-    margin-bottom: 70px;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    vertical-align: middle;
-    font-family: var(--font);
-    font-weight: lighter;
-    font-size: var(--button-text-size);
+    margin-right: auto;
+    margin-left: auto;
+    left: 0;
+    right: 0;
+    min-height: 70vh;
+    animation: fadein ease 1s;
 }
 
 #continue
@@ -315,8 +306,15 @@ h3{
 
 #practicecontrols
 {
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    left: 0;
+    right: 0;
+    min-height: 80vh;
+    animation: fadein ease 1s;
 }
