--- a/Style.css
+++ b/Style.css
@@ -144,7 +144,6 @@ h2{
     -o-animation: letterFade ease 1s;
 }
 h3{
-    position: absolute;
     color: var(--text-color-2);
     font-weight: lighter;
     width: 70%;
@@ -233,12 +232,8 @@ h3{
 
 #start
 {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    top: 400px;
+    /*position: absolute;*/
+    /*top: 400px;*/
     margin-left: auto;
     margin-right: auto;
     left: 0;
@@ -258,6 +253,10 @@ h3{
 
 #direction
 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     font-family: var(--font);
     font-size: var(--button-text-size);
