--- a/Training/Training.css
+++ b/Training/Training.css
@@ -20,6 +20,7 @@
     top: 300px;
     left: 744PX;
     width: 400px;
+    height: 200px;
     font-family: var(--font);
     font-size: var(--button-text-size);
     color: var(--text-color-2);
@@ -41,7 +42,7 @@
 {
     position: absolute;
     top: 720px;
-    left: 876px;
+    left: 848px;
     font-family: var(--font);
     font-size: var(--button-text-size);
 }
@@ -49,7 +50,7 @@
 {
     position: absolute;
     top: 720px;
-    left: 750px;
+    left: 723px;
     font-family: var(--font);
     font-size: var(--button-text-size);
     animation: fadein ease 1s;
