--- a/Training/Training.css
+++ b/Training/Training.css
@@ -1,6 +1,33 @@
 #canvas
 {
-    background-color: #ffffff;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    outline: none;
+    position: absolute;
+    height: 600px;
+    width: 600px;
+    top: 210px;
+    margin-right: auto;
+    margin-left: auto;
+}
+#gradient
+{
+    position: absolute;
+    border: none;
+    outline: none;
+    height: 1200px;
+    width: 1200px;
+    top: -300px;
+    left: -300px;
+    pointer-events: none;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#border
+{
+    overflow: hidden;
+    pointer-events: none;
     border: none;
     outline: none;
     position: absolute;
